# VozPro

./: .env.example  .gitignore  CLAUDE.md  E2E.md  LICENSE  README.md  docker-compose.yml  testes.ipynb
.claude/skills/vozpro-google-ai/: SKILL.md
.claude/skills/vozpro-google-ai/references/: models.md
brain/: .dockerignore  Dockerfile  pyproject.toml
brain/app/: conversation.py  db.py  gemini_chat.py  gemini_jobs.py  logging_config.py  main.py  models.py  pdf.py  prompt.py  retention.py  retry.py  tts.py
brain/prompts/: biu_system.md
brain/static/: curriculo.css
brain/templates/: curriculo.html
brain/tests/: conftest.py  test_conversation.py  test_gemini_jobs.py  test_main.py  test_parsers.py  test_pdf.py  test_prompt.py
brain/tests/fixtures/: curriculo_maria.json
docs/superpowers/specs/: 2026-04-12-biu-whatsapp-assistant-design.md
gateway/: .dockerignore  Dockerfile  package.json
gateway/src/: brainClient.js  handler.js  index.js  mediaUtils.js  phoneQueue.js
img/: PDF_Files.ipynb  code_Execution.ipynb  get_started.ipynb  get_started_thinking.ipynb  grounding.ipynb
